infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  defaultBackend:
    service:
      name: client-srv
      port:
        number: 4200
  rules:
    - host: irembo-url-shortener.com
      http:
        paths:
          - path: /authenticate
            pathType: Prefix
            backend:
              service:
                name: url-management-srv
                port:
                  number: 8090
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: url-management-srv
                port:
                  number: 8090
          - path: /shorten
            pathType: Prefix
            backend:
              service:
                name: url-management-srv
                port:
                  number: 8090
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 4200
    - host: irembo-url-redirect.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: url-redirect-srv
                port:
                  number: 8091
